<resources>
    <string name="app_name">HNGTaskOne</string>
    <string name="hello">Hello There</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="log_in_with_facebook">Log in with facebook</string>
    <string name="are_you_new_register">Are you new ?</string>
    <string name="register">Register</string>
    <string name="weclome">Weclome</string>
    <string name="log_out">LOG OUT</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sing_up">Sing Up</string>
</resources>
