<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".register">

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textSize="50sp"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/hello"
            android:textStyle="bold"
            android:fontFamily="monospace"/>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="monospace" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/regEmailInput"
            android:textColor="@color/colorPrimaryDark"
            android:backgroundTint="@color/green"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="2dp"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="monospace" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernameInput"
            android:textColor="@color/colorPrimaryDark"
            android:backgroundTint="@color/green"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:backgroundTint="@color/green"
            android:textStyle="bold"
            android:fontFamily="monospace"
            android:layout_marginTop="2dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:ignore="RtlHardcoded"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/regPasswordInput"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:backgroundTint="@color/green"
            android:textStyle="bold"
            android:fontFamily="monospace"
            android:layout_marginTop="2dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:ignore="RtlHardcoded"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/confirmPasswordInput"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sing_up"
                android:background="@drawable/log_btn"
                android:textColor="@color/white"
                android:paddingLeft="120dp"
                android:paddingRight="120dp"
                android:id="@+id/regBtn"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:layout_centerHorizontal="true"/>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/regBtn"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:paddingTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/login"
                        android:id="@+id/log"
                    android:textColor="@color/green"
                    android:clickable="true"
                    android:focusable="true" />
            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>


</LinearLayout>